--- a/src/styles.css
+++ b/src/styles.css
@@ -77,17 +77,20 @@ a {
   border: var(--border-width) solid black;
   background-color: #2c272f;
   display: flex;
-  flex-direction: row;
-  align-items: flex-end;
+  flex-direction: column;
   padding: 1rem;
 }
 
-.display .output {
-  align-self: flex-end;
+.display div {
   text-align: right;
   width: 100%;
-  font-size: 3rem;
+  font-size: 2rem;
   word-break: break-all;
+}
+
+.display .current_operant {
+  margin-top: auto;
+  font-size: 4rem;
 }
 
 .command_keys {
@@ -105,6 +108,10 @@ a {
   height: auto;
 }
 
+.command_keys .all_clear {
+  grid-column: 1 / span 2;
+}
+
 .number_keys {
   grid-area: main;
   background-color: #605c63;
@@ -120,7 +127,7 @@ a {
   height: auto;
 }
 
-.number_keys button[value="0"] {
+.number_keys button[data-key="0"] {
   grid-column: 1 / span 2;
   width: auto;
   height: auto;
